--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,12 +29,13 @@ android {
     }
 }
 
-def workflow_version = "0.23.2"
+def workflow_version = "0.29.0-SNAPSHOT"
 
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.squareup.workflow:workflow-core-jvm:$workflow_version"
     implementation "com.squareup.workflow:workflow-ui-core-android:$workflow_version"
+    implementation "com.squareup.workflow:workflow-runtime-jvm:$workflow_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
